--- a/wdshop/src/main/res/layout/footprint_item.xml
+++ b/wdshop/src/main/res/layout/footprint_item.xml
@@ -5,6 +5,7 @@
     android:padding="@dimen/dp_5">
 
     <RelativeLayout
+        android:id="@+id/relate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/recycle_item_shape"
