--- a/wdshop/src/main/res/layout/home_fragment.xml
+++ b/wdshop/src/main/res/layout/home_fragment.xml
@@ -84,11 +84,10 @@
                 android:background="@mipmap/home_btn_moer_pink_n" />
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/hot_recycleview"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_8"
                 android:layout_below="@id/hot_commodity"
-                android:layout_marginLeft="@dimen/dp_24"
-                android:layout_marginRight="@dimen/dp_24"
                 android:layout_marginTop="@dimen/dp_10" />
 
             <ImageView
