--- a/wdshop/src/main/res/layout/rxxp_item.xml
+++ b/wdshop/src/main/res/layout/rxxp_item.xml
@@ -6,7 +6,7 @@
    android:layout_margin="@dimen/dp_5"
     >
    <RelativeLayout
-       android:layout_width="@dimen/dp_105"
+       android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/recycle_item_shape"
        android:padding="@dimen/dp_10"
